browser/themes/shared/customizableui/panelUI.inc.css
/* ... */
panelview
{
-
moz
-
box
-
orient
:
vertical
;
-
moz
-
box
-
flex
:
1
;
}
.
panel
-
subview
-
body
{
overflow
-
y
:
auto
;
overflow
-
x
:
hidden
;
-
moz
-
box
-
flex
:
1
;
}
.
panel
-
view
-
body
-
unscrollable
{
overflow
:
hidden
;
-
moz
-
box
-
flex
:
1
;
}
#
PanelUI
-
popup
.
panel
-
subview
-
body
{
margin
:
-
4px
;
padding
:
4px
4px
;
}
.
subviewbutton
.
panel
-
subview
-
footer
{
box
-
sizing
:
border
-
box
;
min
-
height
:
41px
;
padding
:
11px
12px
;
}
.
cui
-
widget
-
panelview
.
subviewbutton
.
panel
-
subview
-
footer
{
margin
:
4px
0
0
;
-
moz
-
box
-
pack
:
center
;
}
#
appMenu
-
popup
>
arrowscrollbox
>
autorepeatbutton
#
PanelUI
-
popup
>
arrowscrollbox
>
autorepeatbutton
{
display
:
none
;
}
#
appMenu
-
popup
>
arrowscrollbox
>
scrollbox
#
PanelUI
-
popup
>
arrowscrollbox
>
scrollbox
{
overflow
:
visible
;
}
#
appMenu
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
#
PanelUI
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
panel
[
photon
]
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
overflow
:
hidden
;
}
#
PanelUI
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
.
cui
-
widget
-
panel
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
>
.
popup
-
internal
-
box
{
padding
:
0
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
multiline
-
text
{
line
-
height
:
1
.
2
;
max
-
height
:
2
.
4em
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
:
not
(
[
auto
-
hyphens
=
"
off
"
]
)
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
:
not
(
[
auto
-
hyphens
=
"
off
"
]
)
>
.
toolbarbutton
-
multiline
-
text
{
-
moz
-
hyphens
:
auto
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
multiline
-
text
{
position
:
absolute
;
clip
:
rect
(
-
0
.
1em
auto
2
.
6em
auto
)
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
multiline
-
text
{
text
-
align
:
center
;
margin
:
2px
0
0
!
important
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
{
text
-
align
:
center
;
margin
:
-
1px
0
0
;
}
#
wrapper
-
edit
-
controls
:
-
moz
-
any
(
[
place
=
"
palette
"
]
[
place
=
"
panel
"
]
)
>
#
edit
-
controls
#
wrapper
-
zoom
-
controls
:
-
moz
-
any
(
[
place
=
"
palette
"
]
[
place
=
"
panel
"
]
)
>
#
zoom
-
controls
{
margin
-
inline
-
start
:
0
;
}
#
PanelUI
-
contents
{
max
-
width
:
menuPanelWidth
;
}
#
BMB_bookmarksPopup
.
panel
-
mainview
:
not
(
[
panelid
=
"
PanelUI
-
popup
"
]
)
{
max
-
width
:
standaloneSubviewWidth
;
}
#
pageActionFeedback
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowbox
{
visibility
:
hidden
;
}
#
pageActionFeedback
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
background
-
color
:
#
058b00
;
background
-
image
:
none
;
border
-
radius
:
2px
;
color
:
#
fff
;
font
-
weight
:
400
;
font
-
size
:
1
.
1rem
;
-
moz
-
box
-
align
:
center
;
padding
:
6px
10px
;
}
#
pageActionFeedbackAnimatableBox
{
position
:
relative
;
overflow
:
hidden
;
width
:
14px
;
height
:
14px
;
}
#
pageActionFeedbackAnimatableBox
[
animate
]
>
#
pageActionFeedbackAnimatableImage
{
position
:
absolute
;
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
check
-
animation
.
svg
)
;
background
-
repeat
:
no
-
repeat
;
min
-
width
:
266px
;
max
-
width
:
266px
;
min
-
height
:
14px
;
max
-
height
:
14px
;
animation
-
name
:
page
-
action
-
feedback
-
animation
;
animation
-
duration
:
300ms
;
animation
-
delay
:
60ms
;
animation
-
fill
-
mode
:
forwards
;
animation
-
timing
-
function
:
steps
(
18
)
;
}
#
pageActionFeedbackAnimatableBox
[
animate
]
>
#
pageActionFeedbackAnimatableImage
:
-
moz
-
locale
-
dir
(
rtl
)
{
animation
-
name
:
page
-
action
-
feedback
-
animation
-
rtl
;
transform
:
translateX
(
252px
)
;
}
keyframes
page
-
action
-
feedback
-
animation
{
from
{
transform
:
translateX
(
0
)
;
}
to
{
transform
:
translateX
(
-
252px
)
;
}
}
keyframes
page
-
action
-
feedback
-
animation
-
rtl
{
from
{
transform
:
translateX
(
252px
)
;
}
to
{
transform
:
translateX
(
0
)
;
}
}
#
pageActionFeedbackMessage
{
margin
-
inline
-
start
:
7px
;
margin
-
inline
-
end
:
0
;
transform
:
scale
(
.
8
)
;
opacity
:
0
;
transition
:
transform
120ms
cubic
-
bezier
(
.
25
1
.
27
.
35
1
.
18
)
opacity
60ms
linear
;
}
#
pageActionFeedbackAnimatableBox
[
animate
]
+
#
pageActionFeedbackMessage
{
transform
:
scale
(
1
)
;
opacity
:
1
;
}
.
cui
-
widget
-
panel
[
viewId
^
=
PanelUI
-
webext
-
]
.
panel
-
mainview
{
max
-
width
:
800px
;
}
.
cui
-
widget
-
panel
[
viewId
^
=
PanelUI
-
webext
-
]
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
0
;
}
panelview
[
id
^
=
PanelUI
-
webext
-
]
{
overflow
:
hidden
;
}
panelview
:
not
(
[
mainview
]
)
.
toolbarbutton
-
text
.
cui
-
widget
-
panel
toolbarbutton
:
not
(
[
wrap
]
)
>
.
toolbarbutton
-
text
{
text
-
align
:
start
;
display
:
-
moz
-
box
;
}
.
cui
-
widget
-
panel
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
4px
0
;
}
#
appMenu
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
panel
[
photon
]
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
0
;
}
photonpanelmultiview
panelview
{
background
:
var
(
-
-
arrowpanel
-
background
)
;
padding
:
0
;
}
#
appMenu
-
popup
panelview
#
customizationui
-
widget
-
multiview
panelview
:
not
(
[
extension
]
)
{
min
-
width
:
menuPanelWidth
;
max
-
width
:
30em
;
}
#
customizationui
-
widget
-
multiview
#
appMenu
-
libraryView
#
pageActionPanel
panelview
#
widget
-
overflow
panelview
{
min
-
width
:
wideMenuPanelWidth
;
max
-
width
:
wideMenuPanelWidth
;
}
#
appMenu
-
popup
[
touchmode
]
panelview
{
min
-
width
:
calc
(
menuPanelWidth
+
24px
)
;
}
/* ... */

