Bug 1374315 - fix CSS overflow:hidden in overflow panel and page action panel to fix rounded corners, r=mikedeboer
MozReview-Commit-ID: B5lHCaAMvyu

UltraBlame original commit: 1559cabac7b6dc8638cbe8422b14d1371ccba3f2

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -2125,20 +2125,6 @@ arrowcontainer
 panel
 -
 arrowcontent
-#
-PanelUI
--
-popup
->
-.
-panel
--
-arrowcontainer
->
-.
-panel
--
-arrowcontent
 panel
 [
 photon
@@ -12377,33 +12363,6 @@ widget
 panel
 ]
 #
-customizationui
--
-widget
--
-multiview
->
-.
-panel
--
-viewcontainer
-#
-customizationui
--
-widget
--
-multiview
->
-.
-panel
--
-viewcontainer
->
-.
-panel
--
-viewstack
-#
 PanelUI
 -
 panicView
@@ -14808,24 +14767,6 @@ inline
 end
 :
 0
-;
-}
-photonpanelmultiview
-#
-customizationui
--
-widget
--
-multiview
->
-.
-panel
--
-viewcontainer
-{
-overflow
-:
-hidden
 ;
 }
 photonpanelmultiview
